--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,11 @@ p {
     font-size: 1.6rem;
 }
 
+.link{
+  text-decoration: none;
+  color: inherit;
+}
+
 .header{
  min-width:100rem;
   height:6rem;
@@ -81,6 +86,55 @@ p {
   font-weight: 600;
 }
 
+.single-movie{
+  display:flex;
+  align-items: flex-start;
+  justify-content: center;
+  gap:4rem;
+}
+
+.single-movie-img{
+  width:30rem;
+  border-radius: 0.4rem;
+}
+
+.single-movie-info{
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  gap:2rem;
+}
+
+.single-movie-genres{
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap:2rem;
+  font-weight: 600;
+ }
+
+ .single-movie-info-details{
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  gap:0.4rem;
+ }
+
+ .single-movie-info-details-date-duration{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap:1rem;
+ }
+
+ .single-movie-genre{
+  background-color: #8f00ff;
+  color:white;
+  padding: 0.4rem 0.8rem;
+  border-radius: 0.6rem;
+ }
 /* responsive media queries*/
 
 @media only screen and (max-width: 69em){
@@ -97,6 +151,11 @@ p {
     margin:0 auto;
   }
 
+  .single-movie{
+    width:80%;
+    margin:0 auto;
+  }
+
 }
 
 @media only screen and (max-width:27em){
@@ -107,4 +166,11 @@ p {
   .movie-img{
     width:100%;
   }
+
+   .single-movie{
+    width:80%;
+    margin:0 auto;
+    flex-direction: column;
+  }
 }
+
